refactor(validateName): whitelist chars check
Signed-off-by: mrM6TRIX6 <160397330+mrM6TRIX6@users.noreply.github.com>